--- a/index.html
+++ b/index.html
@@ -3,14 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">-->
+    <title>Esercitazione lez 23</title>
 </head>
-<body>
-    <h1>hello</h1>
-    <span id="prezzo">
+<body class="bg-success">
+    <h1>CALCOLA IL PREZZO DEL TUO BIGLIETTO</h1>
+    <!--<span id="prezzo">
         PRECIO
     </span>
-    <span id="prezzo_numero"> euro</span>
+    <span id="prezzo_numero"> euro</span> -->
+
+    <label for="km">kilometri</label>
+    <input type="number" name="km" id="km_utente"> 
+
+    <label for="eta">etá</label>
+    <input type="number" name="eta" id="eta_utente">
+
+    <button id="generator"> Genera Ticket</button>
+
+
+    <!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>-->
     <script src="./script.js"></script>
+    
 </body>
 </html>
