add input eta and km

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <span id="prezzo_numero"> euro</span> -->
 
     <label for="km">kilometri</label>
-    <input type="number" name="km" id="km_utente"> 
+    <input type="number" name="km" id="km"> 
 
     <label for="eta">etá</label>
-    <input type="number" name="eta" id="eta_utente">
+    <input type="number" name="eta" id="eta">
 
     <button id="generator"> Genera Ticket</button>
 
