--- a/index.html
+++ b/index.html
@@ -21,6 +21,22 @@
 
     <button id="generator"> Genera Ticket</button>
 
+    <div id="biglietto"></div>
+
+
+    <!--Option 2 with formc + type=submit:
+    <form action="">
+        <label for="km">kilometri</label>
+        <input type="number" name="km" id="km"> 
+
+        <label for="eta">etá</label>
+        <input type="number" name="eta" id="eta">
+
+        <button type="submit" id="generator"> Genera Ticket</button>
+    </form>
+    
+    -->
+
 
     <!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>-->
     <script src="./script.js"></script>
