--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
           <div class="col">
             <h5 class="py-2 pt-3">Carroza</h5>
-            <span id="carroza"></span>
+            <span id="carrozza"></span>
           </div>
 
           <div class="col">
